2006-02-02  Christian Persch  <chpe@cvs.gnome.org>

	* embed/mozilla/Makefile.am:
	* embed/mozilla/AutoJSContextStack.cpp:
	* embed/mozilla/AutoJSContextStack.h:

	Helper class that pushes a null JS context on the stack,
	and pops it in the destructor.

	* embed/mozilla/ContentHandler.cpp:
	* embed/mozilla/EphyPromptService.cpp:
	* embed/mozilla/FilePicker.cpp:
	* embed/mozilla/GtkNSSClientAuthDialogs.cpp:
	* embed/mozilla/GtkNSSDialogs.cpp:
	* embed/mozilla/GtkNSSKeyPairDialogs.cpp:
	* embed/mozilla/GtkNSSSecurityWarningDialogs.cpp:
	* embed/mozilla/PrintingPromptService.cpp:

	Push a null JS context on the stack when we run a recursive
	mainloop. Fixes the epiphany equivalend of camino bug
	https://bugzilla.mozilla.org/show_bug.cgi?id=179307.

2006-02-02  Christian Persch  <chpe@cvs.gnome.org>

	* m4/gecko.m4:

	Add GECKO_XPIDL to check for xpidl compiler and include directory.

2006-02-02  Christian Persch  <chpe@cvs.gnome.org>

	* m4/gecko.m4:

	Add GECKO_CHECK_HEADERS, wrapping AC_CHECK_HEADERS.

	* configure.ac:

	Simplify some header checks with GECKO_CHECK_HEADERS.
	Check for nsINonBlockingAlertService.h.

	* embed/mozilla/EphyPromptService.cpp:
	* embed/mozilla/EphyPromptService.h:
	* embed/mozilla/MozRegisterComponents.cpp:

	Implement nsINonBlockingAlertService.

2006-02-02  Christian Persch  <chpe@cvs.gnome.org>

	* embed/downloader-view.c:
	* embed/downloader-view.h:
	* embed/ephy-embed-shell.c:
	(ephy_embed_shell_get_downloader_view_nocreate):
	* embed/ephy-embed-shell.h:
	* lib/ephy-gui.c: (ephy_gui_message_dialog_get_content_box):
	* lib/ephy-gui.h:
	* src/ephy-session.c:
	(confirm_shutdown_dialog_update_timeout_label),
	(confirm_shutdown_dialog_tick_cb),
	(confirm_shutdown_dialog_response_cb),
	(confirm_shutdown_dialog_accept_cb),
	(confirm_shutdown_dialog_weak_ref_cb), (confirm_shutdown_cb),
	(save_yourself_cb):

	On session logout, check if there are downloads pending (since
	they're not resumable, bug #128048). #if 0'd for now.
